# conan-matlab-opengl-avi-player

./: CMakeLists.txt  README.md  conanfile.py  run_conan_opengl_avi_player_debug.bat  run_conan_opengl_avi_player_release.bat
Test/: TestOpenGLAviPlayer.cpp  TestOpenGlAvi.m
include/: Decoder.h  Player.h  RoxluPlayer.h  TinyLib.h
source/: Decoder.cpp  RoxluPlayer.cpp  openglAviMex.cpp
